# KairoRenderer

./: CMakeLists.txt  Camera.cppm  DebugDraw.cppm  KairoRenderer.cppm  Material.cppm  Mesh.cppm  PhysicsDebugBridge.cppm  README.md  RenderScene.cppm  Renderer.cppm  RendererTypes.cppm  ShadowSettings.cppm  VulkanBackendContext.cppm  VulkanBuffer.cppm  VulkanCommand.cppm  VulkanDepth.cppm  VulkanDescriptor.cppm  VulkanDevice.cppm  VulkanInstance.cppm  VulkanShadowMap.cppm  VulkanSurface.cppm  VulkanSwapchain.cppm  VulkanSync.cppm  VulkanTriangle.cppm  VulkanViewportTarget.cppm  Window.cppm
examples/: clear_window.cpp
shaders/: debug_line.frag  debug_line.vert  shadow.vert  triangle.frag  triangle.vert
tests/: PhysicsDebugBridgeTests.cpp  RendererTests.cpp
